backup/yaml/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: frontend.zhaoxy.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  - host: nginx.zhaoxy.com
    http:
      paths:
      - backend:
          serviceName: nginx-app
          servicePort: 80
